@@ -1,4 +1,5 @@
 SUBDIRS = main math array_cache swrast swrast_setup tnl shader X
+DIST_SUBDIRS = $(SUBDIRS) glapi
 
 noinst_LTLIBRARIES = libGLcore.la
 
